Bug: 68523,68524,68576 - Lots of unneeded scrollbars in conversation view * Have header control set its scroll style so it doesn't default to visible. * Move mouse event handling to msg header control so that browser handles clicks in body
http://bugzilla.zimbra.com/show_bug.cgi?id=68523
http://bugzilla.zimbra.com/show_bug.cgi?id=68524
http://bugzilla.zimbra.com/show_bug.cgi?id=68576

Copied from Perforce
 Change: 343605

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -466,6 +466,10 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	font-weight:normal;
 }
 
+.Conv2MsgHeader .ZmConvListFragment {
+	padding-left:5px;
+}
+
 /* bug #48863 - fix for IE/Webkit */
 .Trash TD {
 	text-decoration:line-through;
@@ -780,6 +784,7 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	#ENDIF
 	white-space:nowrap;
 	cursor:pointer;
+	-moz-user-select:text;
 }
 
 .Conv2MsgHeader.focused {
